tests/fail/enum_injection.stderr
error: Only structs are supported
 --> tests/fail/enum_injection.rs:3:1
  |
3 | #[injectable]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `injectable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Cannot inject fields from 'Invalid' as this type does not exist
 --> tests/fail/enum_injection.rs:9:1
  |
9 | #[inject_fields(Invalid)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `inject_fields` (in Nightly builds, run with -Z macro-backtrace for more info)
